[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mobly-android-partner-tools"
version = "1.1.2"
description = "Command-line utilities used by Android partners to run packaged Mobly tests and upload test results."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "google-api-python-client",
  "google-auth",
  "google-auth-httplib2",
  "google-cloud",
  "google-cloud-api-keys",
  "google-cloud-resource-manager",
  "google-cloud-storage",
  "httplib2",
  "mobly",
  "pipdeptree",
  "pyyaml",
]

[project.scripts]
mobly_runner = "mobly_runner.mobly_runner:main"
results_uploader = "results_uploader.results_uploader:main"
