[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "results_uploader"
version = "0.7.2"
description = "Tool for uploading Mobly test results to Resultstore web UI."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "google-api-python-client",
  "google-auth",
  "google-auth-httplib2",
  "google-cloud",
  "google-cloud-api-keys",
  "google-cloud-resource-manager",
  "google-cloud-storage",
  "httplib2",
  "mobly",
  "pyyaml",
]

[project.scripts]
results_uploader = "results_uploader:main"
